--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,19 @@
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.url = jdbc:mysql://localhost:3306/librarydb      // change db name accordingly
+spring.datasource.url = jdbc:mysql://localhost:3306/libraryprojectdb      
 
 spring.datasource.username = root
 
 spring.datasource.password =
 
 spring.jpa.show-sql = true
+
+#spring.jpa.hibernate.hbm2ddl.auto=update
+
+#or
+
+spring.jpa.hibernate.ddl-auto = update
 
 #spring.jpa.hibernate.ddl-auto = update				//comment line
 #
